# morning-report

./: .gitignore  CLAUDE.md  morning-report-handoff.md  pyproject.toml
config/: com.snl.morning-report.plist  config.example.yaml
data/: poems.json
scripts/: run-morning-report.sh
skills/: morning-report.md
src/morning_report/: __init__.py  cli.py  config.py  french_gen.py  poems.py
src/morning_report/arxiv/: __init__.py  classifier.py  paper_handler.py
src/morning_report/gatherers/: __init__.py  ads.py  arxiv.py  base.py  calendar.py  email.py  feed_utils.py  github.py  markets.py  meditation.py  news.py  weather.py
src/morning_report/helpers/: calendar_events.swift
src/morning_report/report/: emailer.py  exporter.py  generator.py
src/morning_report/report/templates/: french_learning.md.j2  morning_report.md.j2  morning_report_fr.md.j2
tasks/: lessons.md  morning-report_handoff.md  todo.md
tests/: test_ads.py  test_arxiv.py  test_calendar.py  test_config.py  test_email.py  test_emailer.py  test_exporter.py  test_feed_utils.py  test_french_gen.py  test_french_report.py  test_github.py  test_markets.py  test_meditation.py  test_news.py  test_poems.py  test_weather.py
